// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should match with snapshot 1`] = `
<div>
  <header
    class="sc-gtssRu dokrQo"
  >
    <section
      class="sc-dlnjPT dqIPfq"
    >
      6 July
    </section>
    <section
      class="sc-hKFyIo eYbNZd"
    >
      <div
        class="sc-eCApGN eaCnDs"
      >
        <h1
          class="sc-jSFkmK dqRofX"
        >
          To do list
        </h1>
        <h2
          class="sc-gKAblj btqBcj"
        >
          0
           tasks
        </h2>
      </div>
      <div
        class="sc-iCoHVE gCTGnh"
      >
        <div
          class="sc-bdnylx gcRwmt"
        >
          Add new
        </div>
      </div>
    </section>
  </header>
</div>
`;

exports[`<Header /> should match with snapshot when button is not allowed 1`] = `
<div>
  <header
    class="sc-gtssRu dokrQo"
  >
    <section
      class="sc-dlnjPT dqIPfq"
    >
      6 July
    </section>
    <section
      class="sc-hKFyIo eYbNZd"
    >
      <div
        class="sc-eCApGN eaCnDs"
      >
        <h1
          class="sc-jSFkmK dqRofX"
        >
          To do list
        </h1>
        <h2
          class="sc-gKAblj btqBcj"
        >
          0
           tasks
        </h2>
      </div>
    </section>
  </header>
</div>
`;
